SERVER-18939 Fix mongos initialization so that config server's rs config can safely change during startup